# fade

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
.github/workflows/: release.yml
src/: client.rs  config.rs  interface.rs  main.rs
src/commands/: cleanup.rs  mod.rs  new.rs  setup.rs
src/gql/: machine_config.rs  mod.rs  schema.graphql
src/gql/mutations/: mod.rs
src/gql/mutations/strings/: CreateApp.graphql  LaunchMachine.graphql  RemoveMachine.graphql
src/gql/queries/: mod.rs
src/gql/queries/strings/: GetAppMeta.graphql  GetOrganizationMeta.graphql
src/rest/: launch_machine.rs  list_machines.rs  mod.rs  stop_machine.rs
stamp/: Dockerfile  Dockerfile.full  Dockerfile.minimal  Dockerfile.minimal-docker  Dockerfile.nixos
stamp/launch/: Cargo.toml  Dockerfile
stamp/launch/src/: main.rs
