[package]
name = "fade"
version = "0.3.0"
edition = "2021"
description = "Ephemeral virtual machines, leveraging Fly.io"
repository = "https://github.com/nebulatgs/fade"
categories = ["command-line-interface"]
keywords = ["cli", "fly", "vm", "virtual", "machine"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive", "suggestions"] }
colored = "2"
indicatif = "0.16"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
anyhow = "1.0"
tokio = { version = "1.19", features = ["full"] }
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
open = "3.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphql_client = { version = "0.11" }
dirs = "4.0.0"
dns-lookup = "1.0.8"
network-interface = "0.1.1"
ipnet = "2.5.0"

[workspace]
members = ["stamp/launch"]
